force-app/main/default/objects/Order/fields/Absence_duration_total__c.field-meta.xml
<CustomField>
    <fullName>Absence_duration_total__c</fullName>
    <label>Absence duration total</label>
    <summarizedField>Absence__c.Valid_Absence_Duration_Months__c</summarizedField>
    <summaryForeignKey>Absence__c.Property__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>