force-app/main/default/objects/Order/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>Account.FirstName &amp; &quot; &quot; &amp;Account.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>