force-app/main/default/objects/Order/fields/Approved_absence_duration__c.field-meta.xml
<CustomField>
    <fullName>Approved_absence_duration__c</fullName>
    <label>Approved absence duration</label>
    <summarizedField>Absence__c.Duration__c</summarizedField>
    <summaryFilterItems>
        <field>Absence__c.Type__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Absence__c.Property__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>