force-app/main/default/objects/Order/fields/Assessed_Property_Value__c.field-meta.xml
<CustomField>
    <fullName>Assessed_Property_Value__c</fullName>
    <description>Assessed Property Value</description>
    <formula>Contract.Assessed_Property_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessed Property Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>