force-app/main/default/objects/Order/fields/Dealing_Number__c.field-meta.xml
<CustomField>
    <fullName>Dealing_Number__c</fullName>
    <description>Dealing number can be up to 14 character long and can contain alphanumeric character</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Mortgage Dealing Number</label>
    <length>14</length>
    <type>Text</type>
</CustomField>