force-app/main/default/objects/Order/fields/End_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Payment_Date__c</fullName>
    <description>Earlier of ( Loan Maturity Date OR (Actual Settlement date + 30 years) )</description>
    <formula>IF( ISNULL(End_Payment_Date_Override__c)  , IF(
    Loan_Maturity_Date__c &lt; (
        IF(
            AND(
                MONTH(Actual_Settlement_Date__c) = 2,
                DAY(Actual_Settlement_Date__c) = 29,
                NOT(
                    OR(
                        MOD(YEAR(Actual_Settlement_Date__c) + 30, 400) = 0,
                        AND(
                            MOD(YEAR(Actual_Settlement_Date__c) + 30, 4) = 0,
                            MOD(YEAR(Actual_Settlement_Date__c) + 30, 100) != 0
                        )
                    )
                )
            ),
            DATE(YEAR(Actual_Settlement_Date__c) + 30, 3, 1),
            DATE(YEAR(Actual_Settlement_Date__c) + 30, MONTH(Actual_Settlement_Date__c), DAY(Actual_Settlement_Date__c))
        )
    ),
    Loan_Maturity_Date__c,
    (
        IF(
            AND(
                MONTH(Actual_Settlement_Date__c) = 2,
                DAY(Actual_Settlement_Date__c) = 29,
                NOT(
                    OR(
                        MOD(YEAR(Actual_Settlement_Date__c) + 30, 400) = 0,
                        AND(
                            MOD(YEAR(Actual_Settlement_Date__c) + 30, 4) = 0,
                            MOD(YEAR(Actual_Settlement_Date__c) + 30, 100) != 0
                        )
                    )
                )
            ),
            DATE(YEAR(Actual_Settlement_Date__c) + 30, 3, 1),
            DATE(YEAR(Actual_Settlement_Date__c) + 30, MONTH(Actual_Settlement_Date__c), DAY(Actual_Settlement_Date__c))
        )
    )
) ,End_Payment_Date_Override__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Payment Date</label>
    <type>Date</type>
</CustomField>