force-app/main/default/objects/Order/fields/End_Payment_Date_Override__c.field-meta.xml
<CustomField>
    <fullName>End_Payment_Date_Override__c</fullName>
    <description>The last  scheduled payment date for this property. This is auto calculated based on the dates in the case record.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>End Payment Date Override</label>
    <type>Date</type>
</CustomField>