force-app/main/default/objects/Order/fields/Folio__c.field-meta.xml
<CustomField>
    <fullName>Folio__c</fullName>
    <description>Folio</description>
    <formula>Contract.Folio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Folio</label>
    <type>Text</type>
</CustomField>