force-app/main/default/objects/Order/fields/Free_Valuations_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Free_Valuations_Remaining__c</fullName>
    <formula>IF(Property_Valuation_Count__c &gt;=5, 0, 5-Property_Valuation_Count__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Free Valuations Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>