force-app/main/default/objects/Order/fields/Hide_Payment_Calculator__c.field-meta.xml
<CustomField>
    <fullName>Hide_Payment_Calculator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used as a filter to dynamically hide the Payment Calculator button in the record page</description>
    <label>Hide Payment Calculator</label>
    <type>Checkbox</type>
</CustomField>