force-app/main/default/objects/Order/fields/Initial_Acquisition_Price__c.field-meta.xml
<CustomField>
    <fullName>Initial_Acquisition_Price__c</fullName>
    <formula>Contract.Initial_Acquisition_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Acquisition Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>