force-app/main/default/objects/Order/fields/Loan_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Maturity_Date__c</fullName>
    <description>Actual Settlement Date + Loan Terms( Final Application)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Loan Maturity Date</label>
    <type>Date</type>
</CustomField>