force-app/main/default/objects/Order/fields/Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number__c</fullName>
    <description>Lot Number</description>
    <formula>Contract.Lot_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lot Number</label>
    <type>Text</type>
</CustomField>