force-app/main/default/objects/Order/fields/Paid_Valuations_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Paid_Valuations_Consumed__c</fullName>
    <formula>IF( Property_Valuation_Count__c &lt;=5, 0, Property_Valuation_Count__c - 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid Valuations Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>