force-app/main/default/objects/Order/fields/Panel_Financier_Bank_Logo__c.field-meta.xml
<CustomField>
    <fullName>Panel_Financier_Bank_Logo__c</fullName>
    <formula>Panel_Financier_Name__r.Logo__c</formula>
    <label>Panel Financier Bank Logo</label>
    <type>Text</type>
</CustomField>