force-app/main/default/objects/Order/fields/Panel_Financier_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Panel_Financier_Bank_Name__c</fullName>
    <formula>Panel_Financier_Name__r.Logo__c + &quot; &quot; + Panel_Financier_Name__r.Name</formula>
    <label>Panel Financier Bank Name</label>
    <type>Text</type>
</CustomField>