force-app/main/default/objects/Order/fields/Panel_Financier_Name__c.field-meta.xml
<CustomField>
    <fullName>Panel_Financier_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Panel Financier for which the property is currently being financed by</description>
    <label>Panel Financier Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>