force-app/main/default/objects/Order/fields/Plan_Number__c.field-meta.xml
<CustomField>
    <fullName>Plan_Number__c</fullName>
    <description>Plan Number</description>
    <formula>Contract.Plan_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Number</label>
    <type>Text</type>
</CustomField>