force-app/main/default/objects/Order/fields/Prior_Valuation_Date__c.field-meta.xml
<CustomField>
    <fullName>Prior_Valuation_Date__c</fullName>
    <description>Captures the Prior Valuations Valuation Date when a new Property Valuation is entered</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Prior Valuation Date</label>
    <type>Date</type>
</CustomField>