force-app/main/default/objects/Order/fields/Prior_Valuation_Market_Value__c.field-meta.xml
<CustomField>
    <fullName>Prior_Valuation_Market_Value__c</fullName>
    <description>Captures the Prior Valuations Market Value when a new Property Valuation is entered</description>
    <label>Prior Valuation Market Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>