force-app/main/default/objects/Order/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <formula>ShippingStreet &amp;&quot;, &quot;&amp;
ShippingCity &amp; &quot;, &quot; &amp;
ShippingState &amp; &quot; &quot; &amp;
ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Address</label>
    <type>Text</type>
</CustomField>