force-app/main/default/objects/Order/fields/Property_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Property_Purchase_Price__c</fullName>
    <description>Property Purchase Price</description>
    <formula>Contract.Property_Purchase_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Purchase Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>