force-app/main/default/objects/Order/fields/Property_Valuation_Count__c.field-meta.xml
<CustomField>
    <fullName>Property_Valuation_Count__c</fullName>
    <label>Property Valuation Count</label>
    <summaryForeignKey>Property_Valuation__c.Property__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>