force-app/main/default/objects/Order/fields/Renovation_Decrease_in_Property_Value__c.field-meta.xml
<CustomField>
    <fullName>Renovation_Decrease_in_Property_Value__c</fullName>
    <label>Renovation - Decrease in Property Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>