force-app/main/default/objects/Order/fields/Renovation_Increase_in_Property_Value__c.field-meta.xml
<CustomField>
    <fullName>Renovation_Increase_in_Property_Value__c</fullName>
    <description>Value from the latest Property Valuation where there was in increases in value from a renovation</description>
    <label>Renovation - Increase in Property Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>