force-app/main/default/objects/Order/fields/Shared_Equity_Interest__c.field-meta.xml
<CustomField>
    <fullName>Shared_Equity_Interest__c</fullName>
    <description>SEI =(SEM/(min(MV,AP)) -(P/LMV) )
SEM = Shared Equity Money
MV – Market value of the property
AP – Initial Acquisition Price
P – Amount to be paid by the applicant . Captured from the Annual Review or Windfall gain notification
LMV – Higher of AP or Market Value of the property (from VGV valuations)</description>
    <label>Shared Equity Interest</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>