force-app/main/default/objects/Order/fields/Shared_Equity_Money__c.field-meta.xml
<CustomField>
    <fullName>Shared_Equity_Money__c</fullName>
    <description>State&apos;s equity in the Property</description>
    <label>Shared Equity Money</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>