force-app/main/default/objects/Order/fields/Total_approved_renovation__c.field-meta.xml
<CustomField>
    <fullName>Total_approved_renovation__c</fullName>
    <description>Total approved renovation</description>
    <label>Total approved renovation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>