force-app/main/default/objects/Order/fields/Valuation_Date__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Date__c</fullName>
    <description>This is a field used to identify the date when the Market Value field was updated with the revised value.  It helps determine if the most recent valuation is current or not</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Valuation Date</label>
    <type>Date</type>
</CustomField>