force-app/main/default/objects/Order/fields/Valuation_Fees_Chargeable__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Fees_Chargeable__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Valuation Fees - Chargeable</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>