force-app/main/default/objects/Order/fields/Valuation_Fees_Non_chargeable__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Fees_Non_chargeable__c</fullName>
    <label>Valuation Fees - Non-chargeable</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>