force-app/main/default/objects/Order/fields/Valuation_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Reference_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Valuation Reference Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>