force-app/main/default/objects/Order/fields/vlocity_ins__FirstSubmitAttemptTs__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__FirstSubmitAttemptTs__c</fullName>
    <description>Date of First Submission to Order Management</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date of First Submission to Order Management</inlineHelpText>
    <label>First Submitted Date</label>
    <type>DateTime</type>
</CustomField>