force-app/main/default/objects/Order/fields/vlocity_ins__FirstVersionOrderIdentifier__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__FirstVersionOrderIdentifier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Original Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>