force-app/main/default/objects/Order/fields/vlocity_ins__FulfilmentStatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__FulfilmentStatus__c</fullName>
    <description>The summary fulfilment status of this order. Populated and updated by order management processes for submitted orders.</description>
    <label>Fulfilment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Superseded</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>