force-app/main/default/objects/Order/fields/vlocity_ins__ValidationDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ValidationDate__c</fullName>
    <description>Date of last validation run</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date of last validation run</inlineHelpText>
    <label>Validation Date</label>
    <type>DateTime</type>
</CustomField>