force-app/main/default/objects/Order/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <description>Volume</description>
    <formula>Contract.Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>