force-app/main/default/objects/Order/validationRules/Cannot_activate.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_activate</fullName>
    <active>true</active>
    <description>Status is not used for a property and should not be activated, otherwise certain fields are locked due to standard order behaviour which is to be avoided</description>
    <errorConditionFormula>ISPICKVAL( Status , &quot;Activated&quot;)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>This field is unused and should not be changed</errorMessage>
</ValidationRule>