force-app/main/default/objects/Order/validationRules/Lock_on_Program_Exit.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_on_Program_Exit</fullName>
    <active>true</active>
    <errorConditionFormula>NOT($Profile.Name = &quot;System Administrator&quot; || $Profile.Name =&quot;VHF VGSO Community Plus User&quot;) &amp;&amp;
!IsActive__c &amp;&amp;
NOT(ISCHANGED(IsActive__c))</errorConditionFormula>
    <errorMessage>The record is locked and can&apos;t be updated!</errorMessage>
</ValidationRule>