force-app/main/default/objects/Order/validationRules/Panel_Financier_Name_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Panel_Financier_Name_required</fullName>
    <active>true</active>
    <description>VHF-3453</description>
    <errorConditionFormula>ISBLANK( Panel_Financier_Name__c )</errorConditionFormula>
    <errorDisplayField>Panel_Financier_Name__c</errorDisplayField>
    <errorMessage>Panel Financier Name can&apos;t be blank!</errorMessage>
</ValidationRule>