force-app/main/default/objects/Order/validationRules/Prevent_Lender_update_Account_or_PF_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Lender_update_Account_or_PF_Name</fullName>
    <active>true</active>
    <description>VHF-3229 VHF-3328</description>
    <errorConditionFormula>(($Profile.Name =&quot;VHF Lender Community Plus User&quot;)|| ($Profile.Name=&quot;Operations&quot;))
&amp;&amp;
(
ISCHANGED( AccountId ) 
|| ISCHANGED
( Panel_Financier_Name__c )
)</errorConditionFormula>
    <errorMessage>You can&apos;t update this field!</errorMessage>
</ValidationRule>