force-app/main/default/objects/Order/validationRules/Prevent_Users_creating_records_manually.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Users_creating_records_manually</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( ByPassValidation__c ), NOT($Profile.Name = &quot;System Administrator&quot;), ISNEW())</errorConditionFormula>
    <errorMessage>Sorry, You cannot create a new property record manually.</errorMessage>
</ValidationRule>