force-app/main/default/objects/Order/listViews/All_Properties.listView-meta.xml
<ListView>
    <fullName>All_Properties</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>Property_Address__c</columns>
    <columns>Property_Purchase_Price__c</columns>
    <columns>Assessed_Property_Value__c</columns>
    <columns>Actual_Settlement_Date__c</columns>
    <columns>Folio__c</columns>
    <columns>Volume__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Properties</label>
</ListView>