force-app/main/default/objects/Order/listViews/AllOrders.listView-meta.xml
<ListView>
    <fullName>AllOrders</fullName>
    <columns>ORDER.NAME</columns>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>ORDERS.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Orders</label>
    <sharedTo>
        <group>Admin_Users</group>
    </sharedTo>
</ListView>