force-app/main/default/objects/Order/listViews/My_Property.listView-meta.xml
<ListView>
    <fullName>My_Property</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <label>My Property</label>
    <sharedTo>
        <group>All_Participant_Portal</group>
    </sharedTo>
</ListView>